# puppet-keystone

./: .fixtures.yml  .gitignore  .gitreview  .sync.yml  .travis.yml  .zuul.yaml  20_keystone_federation_identity_provider_spec.rb.disabled  CHANGELOG  CHANGELOG.md  CONTRIBUTING.rst  Gemfile  Modulefile  README.markdown  README.md  Rakefile  metadata.json  setup.cfg
examples/: apache_dropin.pp  apache_with_paths.pp  k2k_sp_shib.pp  ldap_backend.pp  ldap_full.pp  ldap_identity.pp  site.pp  user_project_user_role_composite_namevar.pp  v3_basic.pp  v3_domain_configuration.pp
ext/: keystone_test.rb  keystone_test_v3.rb
files/httpd/: keystone.py
manifests/: bootstrap.pp  cache.pp  client.pp  config.pp  cors.pp  db.pp  deps.pp  disable_admin_token_auth.pp  disable_v2_api.pp  endpoint.pp  federation.pp  healthcheck.pp  init.pp  ldap.pp  ldap_backend.pp  logging.pp  params.pp  policy.pp  python.pp  security_compliance.pp  service.pp
manifests/config/: mysql.pp
manifests/cron/: fernet_rotate.pp  token_flush.pp  trust_flush.pp
manifests/db/: mysql.pp  postgresql.pp  sync.pp
manifests/federation/: identity_provider.pp  mellon.pp  openidc.pp  openidc_httpd_configuration.pp  shibboleth.pp
manifests/messaging/: amqp.pp
manifests/resource/: authtoken.pp  (+2 more)
spec/: shared_examples.rb  shared_examples_acceptance.rb  spec_helper.rb  spec_helper_acceptance.rb
templates/: mellon.conf.erb  openidc.conf.erb  shibboleth.conf.erb
tests/: site.pp
types/: endpointurl.pp  keystoneendpointurl.pp  keystonepublicendpointurl.pp  omittedendpointurl.pp  publicendpointurl.pp
(+368 files in other folders)
