[metadata]
name = puppet-keystone
summary = Puppet module for OpenStack Keystone
description-file =
    README.md
author = Puppet Labs and OpenStack Contributors
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
