[metadata]
name = puppet-keystone
summary = Puppet module for OpenStack Keystone
description_file =
    README.md
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/puppet-openstack-guide/latest
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
